syntax = "proto3";

option java_package = "org.adblockplus.adblockplussbrowser.settings.data.proto";
option java_multiple_files = true;

message ProtoSubscription {
  string url = 1;
  string title = 2;
  int64 last_update = 3;
  ProtoCustomSubscriptionType type = 4;
}

enum ProtoCustomSubscriptionType {
    FROM_URL = 0;
    LOCAL_FILE = 1;
}

enum ProtoUpdateConfig {
  WIFI_ONLY = 0;
  ALWAYS = 1;
}

message ProtoSettings {
  bool saved = 1;
  bool adblock_enabled = 2;
  bool acceptable_ads_enabled = 3;
  ProtoUpdateConfig update_config = 4;
  repeated string allowed_domains = 5;
  repeated string blocked_domains = 6;
  repeated ProtoSubscription active_primary_subscriptions = 7;
  repeated ProtoSubscription active_other_subscriptions = 8;
  bool analytics_enabled = 9;
  bool languages_onboarding_completed = 10;
}

